se resuelven incidencias mapas mentales mensajes de alerta

--- a/tecolotl-web/src/main/webapp/resources/css/alumno/mapa-13.css
+++ b/tecolotl-web/src/main/webapp/resources/css/alumno/mapa-13.css
@@ -106,6 +106,9 @@
     color: white;
     font-weight: bold;
 }
+.mensaje-alerta-13{
+    color: red;
+}
 
 @media screen and (max-width: 900px) {
     .fondo-13{
