--- a/tecolotl-web/src/main/webapp/resources/css/alumno/mapa-10.css
+++ b/tecolotl-web/src/main/webapp/resources/css/alumno/mapa-10.css
@@ -10,7 +10,7 @@
     background-repeat: no-repeat;
     height: 200px;
     display: flex;
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
     justify-content: center;
 }
 
@@ -48,6 +48,13 @@
     min-width: 150px;
     max-width: 150px;
     margin-top: 8%;
+    display: block;
+}
+.mensaje-alerta-10{
+    color: red;
+    display: block;
+    margin-top: 5px;
+    width: 100%;
 }
 @media screen and (max-width: 1024px){
  .caja-texto-10{
