--- a/tecolotl-web/src/main/webapp/resources/css/alumno/template-alumno.css
+++ b/tecolotl-web/src/main/webapp/resources/css/alumno/template-alumno.css
@@ -465,6 +465,12 @@ iframe {
     display: block;
 }
 
+.boton-gral{
+    position: absolute;
+    bottom: -30px;
+    left: 45%;
+}
+
 .uk-subnav{
     justify-content: center ;
 }
