--- a/tecolotl-web/src/main/webapp/resources/css/alumno/mapa-13.css
+++ b/tecolotl-web/src/main/webapp/resources/css/alumno/mapa-13.css
@@ -110,6 +110,13 @@
     color: red;
 }
 
+.boton-gral2{
+    position: absolute;
+    bottom: -30px;
+    left: 45%;
+    padding-left: 10px;
+}
+
 @media screen and (max-width: 900px) {
     .fondo-13{
         background: none;
