--- a/tecolotl-web/src/main/webapp/resources/css/alumno/mapa-cronologico.css
+++ b/tecolotl-web/src/main/webapp/resources/css/alumno/mapa-cronologico.css
@@ -63,6 +63,13 @@
     margin: 3px 0;
     color: red;
 }
+
+.boton-gral1{
+    position: absolute;
+    bottom: -35px;
+    left: 45%;
+}
+
 @media screen and (min-width: 1024px ){
     .margen-mapa{
         margin-top: 25%;
