--- a/tecolotl-web/src/main/webapp/resources/css/alumno/template-alumno.css
+++ b/tecolotl-web/src/main/webapp/resources/css/alumno/template-alumno.css
@@ -581,6 +581,41 @@ iframe {
 
 
 
+.uk-dotnav > * > * {
+    width: 20px;
+    height: 20px;
+    background: #00a49d;
+    border: 1px solid rgba(102, 102, 102, 0.4);
+}
+
+/* Hover + Focus */
+.uk-dotnav > * > :hover,
+.uk-dotnav > * > :focus {
+    background-color: rgba(255, 255, 255, 0.6);
+
+}
+
+/* OnClick */
+.uk-dotnav > * > :active {
+    background-color: gold;
+    border-color: transparent;
+}
+
+/* Active */
+.uk-dotnav > .uk-active > * {
+    background-color: gold;
+    border-color: transparent;
+}
+.uk-notification-message {
+    background: white;
+    border-radius: 8px;
+    border: 4px solid #00A49D;
+    color: black;
+    font-weight: bold;
+}
+
+
+
 @media screen and (max-width: 1030px ){
     body{
         background-image: url("#{resource['img/alumno/fondo-gral-ipad.svg']}");
