se acomoda el boton enviar de mapa-mental 1, 5 y 9.

--- a/tecolotl-web/src/main/webapp/resources/css/alumno/mapa-5.css
+++ b/tecolotl-web/src/main/webapp/resources/css/alumno/mapa-5.css
@@ -71,6 +71,13 @@
     color: red;
     width: 100%;
 }
+
+.boton-gral{
+    position: absolute;
+    bottom: -30px;
+    left: 45%;
+}
+
 @media screen and (max-width: 1025px){
 
     .titulo-mapa-5{
