--- a/tecolotl-web/src/main/webapp/resources/css/alumno/mapa-mental.css
+++ b/tecolotl-web/src/main/webapp/resources/css/alumno/mapa-mental.css
@@ -132,3 +132,9 @@ input[type=text]::placeholder{
     color: red;
 
 }
+
+.boton-gral5{
+    position: absolute;
+    top: 167%;
+    left: 50%;
+}
