--- a/tecolotl-web/src/main/webapp/resources/css/alumno/mapa-13.css
+++ b/tecolotl-web/src/main/webapp/resources/css/alumno/mapa-13.css
@@ -117,6 +117,13 @@
     padding-left: 10px;
 }
 
+textarea {
+    min-width: 100%;
+    max-width: 100%;
+    min-height: 64px;
+    max-height: 150px;
+}
+
 @media screen and (max-width: 900px) {
     .fondo-13{
         background: none;
