--- a/tecolotl-web/src/main/webapp/resources/css/alumno/mapa-linea-secuencia.css
+++ b/tecolotl-web/src/main/webapp/resources/css/alumno/mapa-linea-secuencia.css
@@ -174,6 +174,13 @@ input[type="text"]{
         font-size: 22px;
     }
 }
+
+.boton-gral7{
+    position: absolute;
+    bottom: -30px;
+    left: 45%;
+}
+
 @media screen and (min-width: 1200px) {
     .cuadro-hijo1{
         height: 300px;
