ya se acomodaron la mayoria de los botones enviar en los mapas mentales

--- a/tecolotl-web/src/main/webapp/resources/css/alumno/mapa-capas.css
+++ b/tecolotl-web/src/main/webapp/resources/css/alumno/mapa-capas.css
@@ -78,6 +78,12 @@
     font-weight: bold;
 }
 
+.boton-gral8{
+    position: absolute;
+    bottom: -30px;
+    left: 45%;
+}
+
 @media screen and (max-width: 1024px){
     .caja-capas{
         width: 90%;
