--- a/tecolotl-web/src/main/webapp/resources/css/alumno/mapa-secuencia.css
+++ b/tecolotl-web/src/main/webapp/resources/css/alumno/mapa-secuencia.css
@@ -70,6 +70,12 @@
     margin-left: auto;
 }
 
+.boton-gral9{
+    position: absolute;
+    bottom: -7%;
+    left: 45%;
+}
+
 @media  screen and (max-width: 1499px){
     .margen-secuencia{
         margin-left: 20px;
