--- a/tecolotl-web/src/main/webapp/resources/css/alumno/template-alumno.css
+++ b/tecolotl-web/src/main/webapp/resources/css/alumno/template-alumno.css
@@ -553,6 +553,31 @@ iframe {
     background: rgba(52, 73, 94, 0.5);
 }
 
+
+/*
+Escrol para cajas de texto
+ */
+textarea::-webkit-scrollbar {
+    width: 3px;
+}
+
+/* Track */
+textarea::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 8px black;
+    border-radius: 10px;
+}
+
+/* Handle */
+textarea::-webkit-scrollbar-thumb {
+    background: #00A49D;
+    border-radius: 10px;
+}
+
+/* Handle on hover */
+textarea::-webkit-scrollbar-thumb:hover {
+    background: rgba(52, 73, 94, 0.5);
+}
+
 .mensaje1 > span{
     display: inline-block;
 }
@@ -630,7 +655,7 @@ iframe {
     }
 
     .mensaje1{
-        padding: 20px 30px 0px 35px;
+        padding: 20px 30px 0 35px;
     }
 
     .movimiento{
