--- a/tecolotl-web/src/main/webapp/resources/css/navegacion.css
+++ b/tecolotl-web/src/main/webapp/resources/css/navegacion.css
@@ -144,6 +144,13 @@ uk-subnav-alumno2 li.uk-active:nth-child(6) a {
     width: 180px;
     margin: auto;
 }
-.fondo-pregunta-detonadora{
-
+.uk-modal-dialog.pop-art-modal{
+    background: url("#{resource['img/alumno/pop-art/mensaje-mapa-7.svg']}") no-repeat transparent center center/cover;
+    width: 300px;
+    height: 250px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
 }
+
