--- a/tecolotl-web/src/main/webapp/resources/css/alumno/mapa-cronologico.css
+++ b/tecolotl-web/src/main/webapp/resources/css/alumno/mapa-cronologico.css
@@ -15,7 +15,7 @@
 }
 
 .margen-mapa{
-    margin-top: 25%;
+    margin-top: 330px;
 }
 
 .imagen-mapa{
@@ -34,19 +34,24 @@
     background-position: center center;
 }
 .dialogo{
-    width: 350px;
+    width: 600px;
+    height: 320px;
+    background: url("#{resource['img/alumno/pop-art/pop-art.svg']}") no-repeat center center/100% 100%;
     position: absolute;
     left: 0;
     top: 0;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
 }
 .sobrepuesto{
     z-index: 3;
 }
 
 .titulo-mapa-3{
-    z-index: 2;
-    top: 60px;
-    left: 15px;
     color: rebeccapurple;
     font-weight: bold;
 }
@@ -70,10 +75,13 @@
     left: 45%;
 }
 
-@media screen and (min-width: 1024px ){
-    .margen-mapa{
-        margin-top: 25%;
-    }
+.imagen-calendario{
+    width: 100px;
+    height: 150px;
+}
+
+@media screen and (max-width: 1024px ){
+
     .imagen-mapa{
         width: 200px;
         height: auto;
@@ -85,7 +93,27 @@
     .dialogo{
         width: 250px;
     }
+    .imagen-calendario{
+        width: 80px;
+        height: 100px;
+    }
+    .titulo-mapa-3{
+        font-size: 13px;
+    }
+
 }
+
+@media  screen and (max-width: 1200px) {
+    .imagen-mapa{
+        width: 300px;
+        height: auto;
+        position: absolute;
+        left: 55%;
+        top: 0%;
+        z-index: 2;
+    }
+}
+
 @media  screen and (max-width: 768px) {
     .imagen-mapa{
         width: 200px;
@@ -96,23 +124,18 @@
         z-index: 2;
     }
     .dialogo{
-        width: 220px;
+        width: 250px;
     }
     .titulo-mapa-3{
-        font-size: 20px;
+        font-size: 12px;
+    }
+    .imagen-calendario{
+        width: 70px;
+        height: 90px;
     }
 }
 
-@media  screen and (min-width: 1200px) {
-    .imagen-mapa{
-        width: 300px;
-        height: auto;
-        position: absolute;
-        left: 55%;
-        top: 0%;
-        z-index: 2;
-    }
-}
+
 @media  screen and (max-width: 638px) {
     .imagen-mapa{
         width: 300px;
@@ -155,4 +178,5 @@
         margin-right: 20px;
     }
 }
+
 
