--- a/tecolotl-web/src/main/webapp/resources/css/alumno/template-alumno.css
+++ b/tecolotl-web/src/main/webapp/resources/css/alumno/template-alumno.css
@@ -642,6 +642,52 @@ textarea::-webkit-scrollbar-thumb:hover {
     font-weight: bold;
 }
 
+.formulario-tareas-progreso table{
+    margin-left: auto;
+    margin-right: auto;
+}
+.formulario-tareas-progreso table label{
+    display: none;
+}
+.formulario-tareas-progreso input[type="radio"]{
+    display: inline-block;
+    height: 16px;
+    width: 16px;
+    /* 2 */
+    overflow: hidden;
+    /* 3 */
+    margin-top: -4px;
+    vertical-align: middle;
+    /* 4 */
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    /* 5 */
+    background-color: transparent;
+    /* 6 */
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
+    border: 1px solid #cccccc;
+    transition: 0.2s ease-in-out;
+    transition-property: background-color, border;
+}
+
+.formulario-tareas-progreso input[type="radio"]:focus{
+    outline: none;
+    border-color: #76448A;
+}
+
+.formulario-tareas-progreso input[type="radio"]:checked{
+    background-color: #76448A;
+    border-color: transparent;
+}
+.formulario-tareas-progreso input[type="radio"]:focus:checked{
+    background-color: #76448A;
+}
+
+.formulario-tareas-progreso input[type="radio"]:disabled{
+    background-color: #f8f8f8;
+    border-color: #e5e5e5;
+}
 
 
 @media screen and (max-width: 1030px ){
