--- a/tecolotl-web/src/main/webapp/resources/css/alumno/order-sentences.css
+++ b/tecolotl-web/src/main/webapp/resources/css/alumno/order-sentences.css
@@ -1,9 +1,6 @@
 *{
     box-sizing: border-box;
 }
-ul.js-filter li{
-    margin-left: 20px;
-}
 
 .oraciones{
     width: 80%;
@@ -316,4 +313,44 @@ ul.js-filter li{
 .respuesta-imagen{
     width: 100%;
     height: 100%;
+}
+.complete-sentences ul:nth-child(2){
+    height: 180px;
+    border: 6px solid #D35400;
+    color: white;
+    font-weight: bold;
+    font-size: 20px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+}
+
+.complete-sentences div>span{
+    background: url("#{resource['img/mounstro/whom.svg']}" ) no-repeat left center/32px 32px white;
+    padding: 5px 0 5px 35px;
+    min-width: 120px;
+    display: inline-block;
+    margin-left: 5px;
+    border: #D35400 solid 3px;
+    font-weight: bold;
+    color: black;
+    font-size: 18px;
+    border-radius: 5px;
+    text-align: center;
+}
+
+.respuesta-ordenar-oracion{
+    background-color: transparent;
+    padding: 2px 0;
+    min-width: 100px;
+    min-height: 20px;
+    display: inline-block;
+    text-align: center;
+    border-bottom: 3px solid white;
+}
+
+.remplazar p .respuesta-ordenar-oracion span {
+    color: #00a49d;
+    font-weight: bold;
 }
