--- a/tecolotl-web/src/main/webapp/resources/css/alumno/mapa-mental.css
+++ b/tecolotl-web/src/main/webapp/resources/css/alumno/mapa-mental.css
@@ -135,6 +135,6 @@ input[type=text]::placeholder{
 
 .boton-gral5{
     position: absolute;
-    bottom: -22%;
+    bottom: auto;
     left: 35%;
 }
