--- a/tecolotl-web/src/main/webapp/resources/css/alumno/mapa-cronologico.css
+++ b/tecolotl-web/src/main/webapp/resources/css/alumno/mapa-cronologico.css
@@ -80,6 +80,17 @@
     height: 150px;
 }
 
+.movimiento3{
+    top: 25%;
+    transform: rotate(15deg);
+}
+
+.finalizado3{
+    width: 250px;
+    height: 150px;
+    position: absolute;
+}
+
 @media screen and (max-width: 1024px ){
 
     .imagen-mapa{
