--- a/tecolotl-web/src/main/webapp/resources/css/alumno/mapa-idea.css
+++ b/tecolotl-web/src/main/webapp/resources/css/alumno/mapa-idea.css
@@ -96,6 +96,18 @@
     left: 45%;
 }
 
+.movimiento9{
+    top: 10%;
+    transform: rotate(15deg);
+
+}
+
+.finalizado9{
+    width: 300px;
+    height: 200px;
+    position: absolute;
+}
+
 @media screen and (max-width: 768px){
     .imagen-ard{
         width: 100%;
