--- a/tecolotl-web/src/main/webapp/resources/css/alumno/mapa-5.css
+++ b/tecolotl-web/src/main/webapp/resources/css/alumno/mapa-5.css
@@ -78,6 +78,18 @@
     left: 45%;
 }
 
+.movimiento5{
+    transform: rotate(15deg);
+    top: 10%;
+    right: 34%;
+}
+
+.finalizado5{
+    width: 300px;
+    height: 200px;
+    position: absolute;
+}
+
 @media screen and (max-width: 1025px){
 
     .titulo-mapa-5{
