--- a/tecolotl-web/src/main/webapp/resources/css/alumno/mapa-efecto.css
+++ b/tecolotl-web/src/main/webapp/resources/css/alumno/mapa-efecto.css
@@ -65,6 +65,18 @@ form textarea{
     left: 45%;
 }
 
+.movimiento2{
+    left: 0%;
+    top: 10%;
+    transform: rotate(15deg);
+}
+
+.finalizado2{
+    width: 300px;
+    height: 200px;
+    position: absolute;
+}
+
 @media  screen and (max-width: 1499px){
     .margen-mapa-efecto{
         margin-left: 20px;
