--- a/tecolotl-web/src/main/webapp/resources/css/alumno/mapa-mental-historieta.css
+++ b/tecolotl-web/src/main/webapp/resources/css/alumno/mapa-mental-historieta.css
@@ -48,10 +48,20 @@ input[type="text"]{
 
 .boton-gral6{
     position: absolute;
-    bottom: -119%;
+    bottom: -55%;
     left: 50%;
 }
 
 .opinion{
     padding-left: 120px;
+}
+
+.movimiento6{
+    transform: rotate(15deg);
+}
+
+.finalizado6{
+    width: 300px;
+    height: 200px;
+    position: absolute;
 }
