--- a/tecolotl-web/src/main/webapp/resources/css/alumno/mapa-linea-secuencia.css
+++ b/tecolotl-web/src/main/webapp/resources/css/alumno/mapa-linea-secuencia.css
@@ -110,6 +110,19 @@ input[type="text"]{
     font-weight: bold;
     text-align: center;
 }
+
+.movimiento12{
+    top: 23%;
+    left: 27%;
+    transform: rotate(15deg);
+}
+
+.finalizado12{
+    width: 300px;
+    height: 200px;
+    position: absolute;
+}
+
 @media screen and (max-width: 500px) {
     .cuadro-hijo1{
         height: 200px;
