--- a/tecolotl-web/src/main/webapp/resources/css/alumno/mapa-secuencia.css
+++ b/tecolotl-web/src/main/webapp/resources/css/alumno/mapa-secuencia.css
@@ -94,6 +94,18 @@
     left: 45%;
 }
 
+.movimiento11{
+    transform: rotate(15deg);
+    right: 38%;
+    top: 5%;
+}
+
+.finalizado11{
+    width: 300px;
+    height: 200px;
+    position: absolute;
+}
+
 @media  screen and (max-width: 1499px){
     .margen-secuencia{
         margin-left: 20px;
