--- a/tecolotl-web/src/main/webapp/template/escolar/footer-alumno.xhtml
+++ b/tecolotl-web/src/main/webapp/template/escolar/footer-alumno.xhtml
@@ -8,6 +8,7 @@
 <footer class="botton-footer uk-position-fixed nave-inferior">
     <div class="uk-position-bottom-center"><h:graphicImage library="img" name="alumno/control-a.svg" class="" alt="" width="250" height="auto"/></div>
 </footer>
+<h:outputScript library="js" name="spinner.js"/>
 <h:outputScript library="js" name="uikit.js"/>
 <h:outputScript library="js" name="uikit-icons.js"/>
 </html>
