--- a/tecolotl-web/src/main/webapp/template/escolar/template-alumno.xhtml
+++ b/tecolotl-web/src/main/webapp/template/escolar/template-alumno.xhtml
@@ -8,7 +8,7 @@
       xmlns:f="http://xmlns.jcp.org/jsf/core">
 <ui:include src="head-alumno.xhtml"/>
 <h:body  pt:uk-height-viewport="">
-<!--    <ui:include src="header-alumno.xhtml"/>-->
+    <div id="cargado" class="spinner spinner-open" uk-spinner="ratio: 3"></div>
     <header id="top-head" class="uk-position-fixed">
         <ui:insert name="hamburguesa"/>
     </header>
