--- a/tecolotl-web/src/main/webapp/template/escolar/head-alumno.xhtml
+++ b/tecolotl-web/src/main/webapp/template/escolar/head-alumno.xhtml
@@ -12,6 +12,7 @@
     <h:outputStylesheet library="css" name="uikit.css"/>
     <h:outputStylesheet library="css" name="esquadron.css"/>
     <h:outputStylesheet library="css" name="alumno/template-alumno.css"/>
+    <h:outputStylesheet library="css" name="spinner.css"/>
 
 </h:head>
 </html>
