--- a/tecolotl-web/src/main/webapp/resources/css/alumno/template-alumno.css
+++ b/tecolotl-web/src/main/webapp/resources/css/alumno/template-alumno.css
@@ -471,9 +471,9 @@ iframe {
     display: block;
 }
 
-.mover-boton{
+.boton-trasladar{
     position: absolute;
-    right: 100px;
+    right: 45%;
 }
 
 .boton-gral{
