--- a/tecolotl-web/src/main/webapp/resources/css/alumno/mapa-14.css
+++ b/tecolotl-web/src/main/webapp/resources/css/alumno/mapa-14.css
@@ -64,6 +64,7 @@
     min-width: 100%;
     max-width: 100%;
     max-height:65%;
+    box-sizing: border-box;
 }
 
 .titulo-14{
@@ -89,6 +90,11 @@
 }
 
 @media screen and (max-width: 1024px) {
+    .titulo-14 h3{
+        font-size: 19px;
+        font-weight: bold;
+        width: 220px;
+    }
      .caja-14-uno{
          top: 12%;
      }
@@ -99,6 +105,15 @@
         top: 220px;
     }
 }
+
+@media screen and (max-width: 768px){
+    .titulo-14 h3{
+        font-size: 19px;
+        font-weight: bold;
+        width: 220px;
+    }
+}
+
 @media screen and (max-width: 500px) {
     .arbol{
         background: none;
