--- a/tecolotl-web/src/main/webapp/resources/css/alumno/mapa-14.css
+++ b/tecolotl-web/src/main/webapp/resources/css/alumno/mapa-14.css
@@ -115,6 +115,17 @@
 }
 
 @media screen and (max-width: 500px) {
+
+    .titulo-14 h3{
+        font-size: 10px;
+        font-weight: bold;
+        width: 220px;
+    }
+
+    .titulo-14{
+        width: 45%;
+    }
+
     .arbol{
         background: none;
     }
