correcion mapas mentales

--- a/tecolotl-web/src/main/webapp/resources/css/alumno/mapa-5.css
+++ b/tecolotl-web/src/main/webapp/resources/css/alumno/mapa-5.css
@@ -66,6 +66,7 @@
     min-width: 100%;
     max-width: 100%;
     margin-top: 3px;
+    box-sizing: border-box;
 }
 .mensaje-alerta-5{
     color: red;
