--- a/tecolotl-web/src/main/webapp/resources/css/esquadron.css
+++ b/tecolotl-web/src/main/webapp/resources/css/esquadron.css
@@ -409,7 +409,7 @@ input[type=text]:focus,input[type=email]:focus,input[type=password]:focus,select
   border: solid;
   border-width: 3px;
   border-color: var(--turquesa-primary-color);
-  border-radius: 5%;
+  border-radius: 8px;
 }
 
 .uk-dropdown ul li a{
